feat(Skills): Adds skills

--- a/webserver/templates/portfolio.html
+++ b/webserver/templates/portfolio.html
@@ -38,6 +38,7 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">Home</a></li>
           <li><a href="./portfolio.html" title="">Portfolio</a></li>
+          <li><a href="./skills.html" title="">Skills</a></li>
           <li><a href="./about.html" title="">About me</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
         </ul>
