--- a/webserver/templates/skills.html
+++ b/webserver/templates/skills.html
@@ -79,6 +79,10 @@
                     <li>SCSS</li>
                     <li>RxJS</li>
                     <li>MatPlotLib</li>
+                    <li>Relational and non-relational databases</li>
+                    <li>CI/CD pipelines</li>
+                    <li>Rest APIs</li>
+                    <li>GraphQL</li>
                 </ul>
                </div>
 
