feat(Skills): Updates skills

--- a/webserver/templates/skills.html
+++ b/webserver/templates/skills.html
@@ -79,8 +79,12 @@
                     <li>SCSS</li>
                     <li>RxJS</li>
                     <li>MatPlotLib</li>
-                    <li>Relational and non-relational databases</li>
-                    <li>CI/CD pipelines</li>
+                    <li>Pyspark MLlib</li>
+                    <li>Ingesting and processing large datasets</li>
+                    <li>Big data analystics</li>
+                    <li>Relational and NoSQL databases</li>
+                    <li>CI/CD pipelines: Bamboo, GitLab</li>
+                    <li>Version Control: Git and BitBucket</li>
                     <li>Rest APIs</li>
                     <li>GraphQL</li>
                 </ul>
@@ -91,6 +95,7 @@
                 <h4>Upcoming</h4>
                 <ul>
                     <li>AWS Cloud Practitioner</li>
+                    <li>AWS Developer Associate</li>
                 </ul>
                </div>
               </div>
