feat(README): Adds README

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -58,8 +58,8 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Emily</span>
-                  <span>Web dev interested, in data and cloud</span>
-                 
+                  <span>Dev, interested in web-development, data and cloud</span>
+                  <span>Mental Health Advocate</span>
                 </span>
                 <span id="typed"></span>
               </h1>
