--- a/webserver/templates/skills.html
+++ b/webserver/templates/skills.html
@@ -81,7 +81,9 @@
                     <li>MatPlotLib</li>
                     <li>Pyspark MLlib</li>
                     <li>Ingesting and processing large datasets</li>
-                    <li>Big data analystics</li>
+                    <li>Big data analytics</li>
+                    <li>Building machine learning pipelines</li>
+                    <li>Basic machine learning and NLP techniques</li>
                     <li>Relational and NoSQL databases</li>
                     <li>CI/CD pipelines: Bamboo, GitLab</li>
                     <li>Version Control: Git and BitBucket</li>
