feat(Skills contact portfolio): Updates skills portfolio and adds github

--- a/webserver/templates/portfolio.html
+++ b/webserver/templates/portfolio.html
@@ -70,35 +70,32 @@
                     <div class="col-sm-4">
 
                       <a href="./portfolio_detail.html" title="" class="black-image-project-hover">
-                        <img src="./static/images/" alt="" class="img-responsive">
+                        <img src="./static/images/chitter.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>001/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./portfolio_detail.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Chitter</h3>
+                        <p>A Sinatra/postgresql application designed to mimic a simple version of the popular microblogging site - Twitter.</p>
+                        <a href="https://github.com/emilyjspencer/chitter-challenge" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <a href="./portfolio_detail.html" title="" class="black-image-project-hover">
-                        <img src="./static/images/" alt="" class="img-responsive">
+                        <img src="./static/images/globalreads.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>002/006</h4>
-                        <h3>Nulla scelerisque</h3>
-                        <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                        <a href="./portfolio_detail.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Global Reads</h3>
+                        <p>A Rails application to support the Global Reading Project - a reading initiative at UHS Wimbledon</p>
+                        <a href="https://github.com/emilyjspencer/Global-Reads" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <a href="./portfolio_detail.html" title="" class="black-image-project-hover">
-                        <img src="./static/images/" alt="" class="img-responsive">
+                        <img src="./static/images" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>003/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./portfolio_detail.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Dancewear</h3>
+                        <p>A dancewear shop (based on my favourite dancewear store: Dance Direct)</p>
+                        <a href="https://github.com/emilyjspencer/dancewear-app", title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -113,10 +110,9 @@
                       <img src="./static/images/" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
-                      <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./portfolio_detail.html" class="btn btn-default">Discover</a>
+                      <h3>Tradus</h3>
+                      <p>A currency converter.</p>
+                      <a href="https://64bd565ba6f4893f194be119--graceful-beijinho-fee577.netlify.app/" class="btn btn-default">Discover</a>
                     </div>
                   </div>
                    <div class="col-sm-4">
@@ -124,10 +120,9 @@
                         <img src="./static/images" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
-                        <h4>005/006</h4>
-                        <h3>Fringilla sit amet</h3>
-                        <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
-                        <a href="./portfolio_detail.html" class="btn btn-default">Discover</a>
+                        <h3>Pristine Pics</h3>
+                        <p>Pristine Pics - a React application which allows you to upload your favourite pictures</p>
+                        <a href="https://github.com/emilyjspencer/Pristine-Pics" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
@@ -136,10 +131,9 @@
                         <img src="./static/images" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
-                        <h4>006/006</h4>
-                        <h3>Vivamus vestibulum</h3>
-                        <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                        <a href="./portfolio_detail.html" class="btn btn-default">Discover</a>
+                        <h3>Finbot</h3>
+                        <p>"A chat bot designed with young people in mind to advise them on matters of personal finance. Makers final project</p>
+                        <a href="https://github.com/nikimanoledaki/finbot-api" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     
