--- a/webserver/templates/contact.html
+++ b/webserver/templates/contact.html
@@ -85,21 +85,15 @@
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                          </span>
-                          xxxxxxxxxxxxxxxxxxxx
+                         emilyspencer89@hotmail.co.uk
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
                     
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
+                      <a href="https://github.com/emilyjspencer" title="" class="fa-icon">
+                        <i class="fa fa-github"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://uk.linkedin.com/in/emily-spencer-a407269b" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
