--- a/webserver/templates/skills.html
+++ b/webserver/templates/skills.html
@@ -9,7 +9,6 @@
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE  -->
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
@@ -55,7 +54,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">Skills and Certifications</h1>
+            <h1 class="h2">Skills, Certifications and Education</h1>
           </div>
           
           <div class="row">
@@ -64,16 +63,22 @@
                 <div class="col-xs-12 col-md-6">
                  
                <div class="skills">
+                <h3>Skills</h3>
                 <ul>
                     <li>JavaScript</li>
+                    <li>TypeScript</li>
                     <li>Java</li>
                     <li>Python</li>
                     <li>Angular</li>
                     <li>React</li>
                     <li>Spring Boot</li>
                     <li>Jest</li>
+                    <li>React Testing Library</li>
+                    <li>JUnit</li>
+                    <li>Spring Security</li>
                     <li>PySpark</li>
                     <li>Spark API</li>
+                    <li>SQL</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>SCSS</li>
@@ -98,6 +103,15 @@
                 <ul>
                     <li>AWS Cloud Practitioner</li>
                     <li>AWS Developer Associate</li>
+                </ul>
+               </div>
+
+               <div class="education">
+                <h3>Education</h3>
+                <ul>
+                    <li>FDM Group: Java Graduate program</li>
+                    <li>Makers Academy: Software Engineering: 16-week bootcamp</li>
+                    <li>The University of Sheffield: BA Modern Languages</li>
                 </ul>
                </div>
               </div>
