feat(Portfolio): Adds projects

--- a/webserver/templates/portfolio.html
+++ b/webserver/templates/portfolio.html
@@ -136,7 +136,52 @@
                         <a href="https://github.com/nikimanoledaki/finbot-api" class="btn btn-default">Discover</a>
                       </div>
                     </div>
+
+                    <div class="col-sm-4">
+                      <a href="./portfolio_detail.html" class="black-image-project-hover">
+                        <img src="./static/images/filterdiversions.png" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h3>Flights data</h3>
+                        <p>Data ingestion and analysis</p>
+                        <a href="" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                      <a href="./portfolio_detail.html" class="black-image-project-hover">
+                        <img src="" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h3>Covid data</h3>
+                        <p>Building machine learning pipelines to predict COVID cases and deaths</p>
+                        <a href="" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
+
                     
+                    <div class="col-sm-4">
+                      <a href="./portfolio_detail.html" class="black-image-project-hover">
+                        <img src="" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h3>Acebook</h3>
+                        <p>A Facebook clone built using the Rails framework</p>
+                        <a href="https://github.com/emilyjspencer/acebook-inSANE" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
+                    
+                    <div class="col-sm-4">
+                      <a href="./portfolio_detail.html" class="black-image-project-hover">
+                        <img src="" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h3>Guardian News</h3>
+                        <p>An Angular application which calls on the Guardian API</p>
+                        <a href=" https://github.com/emilyjspencer/Guardian-News-Angular" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
+                   
                 </div>
              
             </div>
