--- a/webserver/templates/skills.html
+++ b/webserver/templates/skills.html
@@ -64,27 +64,43 @@
                  
                <div class="skills">
                 <h3>Skills</h3>
+                <h4>Languages</h4>
                 <ul>
                     <li>JavaScript</li>
                     <li>TypeScript</li>
                     <li>Java</li>
                     <li>Python</li>
+                </ul>
+                <h4>Libraries & frameworks</h4>
+                <ul>
                     <li>Angular</li>
                     <li>React</li>
                     <li>Spring Boot</li>
+                    <li>RxJS</li>
+                </ul>
+                <h4>Testing</h4>
+                <ul>
                     <li>Jest</li>
                     <li>React Testing Library</li>
                     <li>JUnit</li>
-                    <li>Spring Security</li>
-                    <li>PySpark</li>
+                    <li>Cypress</li>
+                </ul>
+                <h4>Big Data Processing</h4>
+                <ul>
+                  <li>PySpark</li>
                     <li>Spark API</li>
+                    <li>Spring Security</li>
+                    <li>MatPlotLib</li>
+                    <li>Pyspark MLlib</li>
+                  </ul>
+                  <h4>Other</h4>
+                  <ul>
                     <li>SQL</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>SCSS</li>
-                    <li>RxJS</li>
-                    <li>MatPlotLib</li>
-                    <li>Pyspark MLlib</li>
+                  </ul>
+                    
                     <li>Ingesting and processing large datasets</li>
                     <li>Big data analytics</li>
                     <li>Building machine learning pipelines</li>
@@ -92,8 +108,6 @@
                     <li>Relational and NoSQL databases</li>
                     <li>CI/CD pipelines: Bamboo, GitLab</li>
                     <li>Version Control: Git and BitBucket</li>
-                    <li>Rest APIs</li>
-                    <li>GraphQL</li>
                 </ul>
                </div>
 
