--- a/webserver/templates/contact.html
+++ b/webserver/templates/contact.html
@@ -74,13 +74,10 @@
                       <button type="submit" class="btn btn-default btn-lg">Send</button>
                     </div>
                     <div class="col-md-5 address-container">
+                      <a href="./portfolio_detail.html" class="black-image-project-hover">
+                        <img src="./static/images/desk.jpg" alt="Image" style="height:250px; width:400px">
+                      </a>
                       <ul class="list-unstyled">
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                          + xxxxxxxxxxxxxxxxx
-                        </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
@@ -96,14 +93,14 @@
                       <a href="https://uk.linkedin.com/in/emily-spencer-a407269b" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
-
+                      
                     </div>
                   </div>
                 </form>
             </div>
 
           </div>
-         
+          
        </div>
       </div>
     </div>
