--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -35,7 +35,7 @@
         </button>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
+        <ul class="nav navbar-nav " style="color:black">
           <li><a href="./index.html" title="">Home</a></li>
           <li><a href="./portfolio.html" title="">Portfolio</a></li>
           <li><a href="./skills.html" title="">Skills</a></li>
@@ -59,7 +59,7 @@
                 <span id="typed-strings">
                   <span>I'm Emily</span>
                   <span>Dev, interested in web-development, data and cloud</span>
-                  <span>Mental Health Advocate</span>
+               
                 </span>
                 <span id="typed"></span>
               </h1>
