--- a/webserver/templates/skills.html
+++ b/webserver/templates/skills.html
@@ -49,6 +49,7 @@
   </nav>
 </header>
 
+
 <div class="section-container">
     <div class="container">
       <div class="row">
@@ -56,13 +57,10 @@
           <div class="section-container-spacer text-center">
             <h1 class="h2">Skills, Certifications and Education</h1>
           </div>
-          
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                 
-               <div class="skills">
                 <h3>Skills</h3>
                 <h4>Languages</h4>
                 <ul>
@@ -85,16 +83,17 @@
                     <li>JUnit</li>
                     <li>Cypress</li>
                 </ul>
+                
                 <h4>Big Data Processing</h4>
                 <ul>
                   <li>PySpark</li>
                     <li>Spark API</li>
-                    <li>Spring Security</li>
                     <li>MatPlotLib</li>
                     <li>Pyspark MLlib</li>
                   </ul>
                   <h4>Other</h4>
                   <ul>
+                    <li>Spring Security</li>
                     <li>SQL</li>
                     <li>HTML</li>
                     <li>CSS</li>
@@ -109,30 +108,31 @@
                     <li>CI/CD pipelines: Bamboo, GitLab</li>
                     <li>Version Control: Git and BitBucket</li>
                 </ul>
-               </div>
-
-               <div class="certification">
+           
                 <h3>Certifications</h3>
                 <h4>Upcoming</h4>
                 <ul>
                     <li>AWS Cloud Practitioner</li>
                     <li>AWS Developer Associate</li>
                 </ul>
-               </div>
-
-               <div class="education">
                 <h3>Education</h3>
                 <ul>
                     <li>FDM Group: Java Graduate program</li>
                     <li>Makers Academy: Software Engineering: 16-week bootcamp</li>
                     <li>The University of Sheffield: BA Modern Languages</li>
                 </ul>
-               </div>
+                  </div>
+               <div class="col-xs-12 col-md-6">
+              
+                <a href="./portfolio_detail.html" class="black-image-project-hover">
+                  <img src="./static/images/codee.jpg" alt="Image" style="height:650px; width:500px">
+                </a>
+                </div>
               </div>
             </div>
           </div>
           
-          
+        
        </div>
       </div>
     </div>
