feat(Portfolio): Updates Portfolio

--- a/webserver/templates/portfolio.html
+++ b/webserver/templates/portfolio.html
@@ -181,7 +181,28 @@
                         <a href=" https://github.com/emilyjspencer/Guardian-News-Angular" class="btn btn-default">Discover</a>
                       </div>
                     </div>
+
+                    <div class="col-sm-4">
+                      <a href="./portfolio_detail.html" class="black-image-project-hover">
+                        <img src="./static/images" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h3>AWS Serverless app</h3>
+                        <p>"S3 & CloudFront</p>
+                        <a href="" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
                    
+                    <div class="col-sm-4">
+                      <a href="./portfolio_detail.html" class="black-image-project-hover">
+                        <img src="./static/images" alt="Image" class="img-responsive">
+                      </a>
+                      <div class="card-container">
+                        <h3>AWS Distance app</h3>
+                        <p>"Lambda, AWS Amplify, AWS API gateway, DynamoDB</p>
+                        <a href="" class="btn btn-default">Discover</a>
+                      </div>
+                    </div>
                 </div>
              
             </div>
