feat(About): Updates About section. Adds grandmother

--- a/webserver/templates/about.html
+++ b/webserver/templates/about.html
@@ -61,16 +61,25 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>xxxxxxxxxxxxxxxxxxxxxxxxxxx</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>xxxxxxxxxxxxxxxxxxx</h3>
+                  <h3>Hi there, I'm Emily</h3>
+                  <p>I'm a software development consultant and career-changer.</p>
+                  <p>I kickstarted my tech career with roles at two different financial institutions before moving on to work on some internal projects with FDM Group.
+
+<p>While I've previously worked with Java, Spring, Spring Boot, React and Angular, I'm currently exploring the Python ecosystem.</p>
+<p>I consider myself first and foremost to be a developer, but I'm also interested in data and cloud, and therefore open to roles in those spaces.</p>
+</p>
+                  
+                  <h3>Why tech?</h3>
+                  <p>I studied Modern Languages at the University of Sheffield, and while it was a great experience, I can't help but feel that I would have been
+                    'better suited' to computer science. Admittedly, computing lessons, when I was at school, weren't what they are nowadays, so computer science never crossed my mind.
+                    The 'closest' I got was Maths A Level (I must admit I do LOVE maths)
+                  </p>
+                  <p> 
+                    
+                
+                  
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  I'm a self-confessed 'geek'. I love learning, problem-solving, and experimenting with new technologies. I find joy in crafting solutions to complex problems, and from my perspective, the world of tech provides the perfect canvas for my creative coding endeavours.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/images/emily.jpg" class="img-responsive" alt="">
