feat(About): Updates about

--- a/webserver/templates/about.html
+++ b/webserver/templates/about.html
@@ -70,19 +70,24 @@
 </p>
                   
                   <h3>Why tech?</h3>
-                  <p>I studied Modern Languages at the University of Sheffield, and while it was a great experience, I can't help but feel that I would have been
-                    'better suited' to computer science. Admittedly, computing lessons, when I was at school, weren't what they are nowadays, so computer science never crossed my mind.
-                    The 'closest' I got was Maths A Level (I must admit I do LOVE maths)
+                  <p>I studied Modern Languages at the University of Sheffield, and while it was a good experience, I never felt that it was the 'right' degree for me.
+                  Admittedly, computing lessons, when I was at school, weren't what they are nowadays, so computer science never crossed my mind as a subject to study at a higher level.
+                  The 'closest' I got was Maths A Level. 
                   </p>
                   <p> 
-                    
-                
-                  
-                  <p>
                   I'm a self-confessed 'geek'. I love learning, problem-solving, and experimenting with new technologies. I find joy in crafting solutions to complex problems, and from my perspective, the world of tech provides the perfect canvas for my creative coding endeavours.</p>
+                  <p>The fact that it is impossible to know every programming language, library and framework out there, makes it all the more exciting</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/images/emily.jpg" class="img-responsive" alt="">
+                </div>
+                <div>
+                  <p>I enjoy attending tech events; this year I attended a two-day, all-female hackathon, Athena Hack, organised by ShowCode.
+                    as well as the launch event of the JavaScript framework Qwik.
+                  </p>
+                  <p>I'm an advocate for mental health and women in technology.</p>
+                  <img src="./static/images/joannaj.png" alt="emilycomesfromafamilyofintellectuals">
+                  My maternal grandmother with her Maths Degree.
                 </div>
               </div>
             </div>
