fix(about): Fixes image path

--- a/webserver/templates/about.html
+++ b/webserver/templates/about.html
@@ -86,8 +86,8 @@
                     as well as the launch event of the JavaScript framework Qwik.
                   </p>
                   <p>I'm an advocate for mental health and women in technology.</p>
-                  <img src="./static/images/joannaj.png" alt="emilycomesfromafamilyofintellectuals">
-                  My maternal grandmother with her Maths Degree.
+                  <img src="./static/images/joannak.png" alt="emilycomesfromafamilyofintellectuals">
+                  My maternal (Irish) grandmother with her Maths Degree.
                 </div>
               </div>
             </div>
