feat(About ): Updates about

--- a/webserver/templates/about.html
+++ b/webserver/templates/about.html
@@ -72,26 +72,42 @@
                   <h3>Why tech?</h3>
                   <p>I studied Modern Languages at the University of Sheffield, and while it was a good experience, I never felt that it was the 'right' degree for me.
                   Admittedly, computing lessons, when I was at school, weren't what they are nowadays, so computer science never crossed my mind as a subject to study at a higher level.
-                  The 'closest' I got was Maths A Level. 
+                  The 'closest' I got was Maths A Level (which is hardly Computer Science is it). Especially given that the one module that might have been somewhat useful (Decision Mathematics)
+                  as the one module my school didn't offer!!
                   </p>
                   <p> 
                   I'm a self-confessed 'geek'. I love learning, problem-solving, and experimenting with new technologies. I find joy in crafting solutions to complex problems, and from my perspective, the world of tech provides the perfect canvas for my creative coding endeavours.</p>
                   <p>The fact that it is impossible to know every programming language, library and framework out there, makes it all the more exciting</p>
+                  <p>Above all, the potential to work on innovative projects, while using technology to solve real-world problems, contributing to projects that have a positive impact on people's lives around the world, is what most excites me about working in tech.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/images/emily.jpg" class="img-responsive" alt="">
                 </div>
                 <div>
+                  <div class="empty" style="height:400px; width:500px">
+
+                  </div>
                   <p>I enjoy attending tech events; this year I attended a two-day, all-female hackathon, Athena Hack, organised by ShowCode.
                     as well as the launch event of the JavaScript framework Qwik.
                   </p>
                   <p>I'm an advocate for mental health and women in technology.</p>
-                  <img src="./static/images/joannak.png" alt="emilycomesfromafamilyofintellectuals">
-                  My maternal (Irish) grandmother with her Maths Degree.
+                  <p>While much great work has been done to attract women into technology, such as the many initiatives of Code First Girls, only 24% of developer positions are held
+                    by women, and many of those still have a STEM background, as opposed to a humanities or arts degree. 
+                    Far too women *still* face various forms of discrimination within the tech space; there's still much ground to cover in the journey toward true equality.  
+                    <img src="./static/images/joannak.png" alt="emilycomesfromafamilyofintellectuals"
+                    style="height:630px; width:450px">
+                    <br>
+                    <br style="margin-left: 400px">
+                    Above: My maternal (Irish) grandmother with her Maths Degree.
                 </div>
+                  </p>
+            
+                </div>
+               
               </div>
+              
             </div>
-          </div>
+           
           
           
        </div>
