feat(About): Updates about

--- a/webserver/templates/about.html
+++ b/webserver/templates/about.html
@@ -72,8 +72,7 @@
                   <h3>Why tech?</h3>
                   <p>I studied Modern Languages at the University of Sheffield, and while it was a good experience, I never felt that it was the 'right' degree for me.
                   Admittedly, computing lessons, when I was at school, weren't what they are nowadays, so computer science never crossed my mind as a subject to study at a higher level.
-                  The 'closest' I got was Maths A Level (which is hardly Computer Science is it). Especially given that the one module that might have been somewhat useful (Decision Mathematics)
-                  as the one module my school didn't offer!!
+                  The 'closest' I got was Maths A Level (which is hardly Computer Science is it). 
                   </p>
                   <p> 
                   I'm a self-confessed 'geek'. I love learning, problem-solving, and experimenting with new technologies. I find joy in crafting solutions to complex problems, and from my perspective, the world of tech provides the perfect canvas for my creative coding endeavours.</p>
