feat(About): Grandmother

--- a/webserver/templates/about.html
+++ b/webserver/templates/about.html
@@ -72,7 +72,7 @@
                   <h3>Why tech?</h3>
                   <p>I studied Modern Languages at the University of Sheffield, and while it was a good experience, I never felt that it was the 'right' degree for me.
                   Admittedly, computing lessons, when I was at school, weren't what they are nowadays, so computer science never crossed my mind as a subject to study at a higher level.
-                  The 'closest' I got was Maths A Level (which is hardly Computer Science is it). 
+                  The 'closest' I got was Maths A Level, which is hardly Computer Science is it. 
                   </p>
                   <p> 
                   I'm a self-confessed 'geek'. I love learning, problem-solving, and experimenting with new technologies. I find joy in crafting solutions to complex problems, and from my perspective, the world of tech provides the perfect canvas for my creative coding endeavours.</p>
@@ -86,7 +86,7 @@
                   <div class="empty" style="height:400px; width:500px">
 
                   </div>
-                  <p>I enjoy attending tech events; this year I attended a two-day, all-female hackathon, Athena Hack, organised by ShowCode.
+                  <p>I enjoy attending tech events; this year I attended a two-day, all-female hackathon, Athena Hack, organised by ShowCode,
                     as well as the launch event of the JavaScript framework Qwik.
                   </p>
                   <p>I'm an advocate for mental health and women in technology.</p>
@@ -94,10 +94,13 @@
                     by women, and many of those still have a STEM background, as opposed to a humanities or arts degree. 
                     Far too women *still* face various forms of discrimination within the tech space; there's still much ground to cover in the journey toward true equality.  
                     <img src="./static/images/joannak.png" alt="emilycomesfromafamilyofintellectuals"
-                    style="height:630px; width:450px">
+                    style="height:630px; width:500px">
                     <br>
                     <br style="margin-left: 400px">
                     Above: My maternal (Irish) grandmother with her Maths Degree.
+                    Back in the day, women had no choice but to give up their careers when they married. My
+                    grandmother used her maths degree to teach maths at an Ursuline School in Waterford, Ireland.
+                    Obviously, we've come a long way since then, but there is still much that needs to be done.
                 </div>
                   </p>
             
